WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302853
[GStreamer] http/wpt/mediastream/mediastreamtrackprocessor-videoframe-timestamp.html crashes on the bots
https://bugs.webkit.org/show_bug.cgi?id=302853
Summary
[GStreamer] http/wpt/mediastream/mediastreamtrackprocessor-videoframe-timesta...
Nikolas Zimmermann
Reported
2025-11-20 02:33:54 PST
Logs:
https://ews-build.s3-us-west-2.amazonaws.com/GTK-WK2-Tests-EWS/a669cbc3-109291/http/wpt/mediastream/mediastreamtrackprocessor-videoframe-timestamp-crash-log.txt
Thread 1 (Thread 0x7fbdce7fc6c0 (LWP 926160)): #0 0x00007fd0cbc8ff3f in WTFCrash () at /home/buildbot-worker/GTK-WK2-Tests-EWS/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #1 0x00007fd0d5fb6909 in WebCore::MediaStreamTrackPrivate::addObserver(WebCore::MediaStreamTrackPrivateObserver&) () at /home/buildbot-worker/GTK-WK2-Tests-EWS/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #2 0x00007fd0d5fffb52 in webkitMediaStreamSrcChangeState(_GstElement*, GstStateChange) () at /home/buildbot-worker/GTK-WK2-Tests-EWS/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #3 0x00007fd0c8125252 in gst_element_change_state (element=element@entry=0x55cbbe327b40, transition=transition@entry=GST_STATE_CHANGE_NULL_TO_READY) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gstelement.c:3100 #4 0x00007fd0c81259f5 in gst_element_set_state_func (element=0x55cbbe327b40, state=GST_STATE_READY) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gstelement.c:3054 #5 0x00007fd0c80ff36f in gst_bin_element_set_state (next=<optimized out>, current=<optimized out>, start_time=18446744073709551615, base_time=0, element=0x55cbbe327b40, bin=<optimized out>) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gstbin.c:2582 #6 gst_bin_change_state_func (element=0x55cbbe324600, transition=GST_STATE_CHANGE_NULL_TO_READY) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gstbin.c:2934 #7 0x00007fd0c8125252 in gst_element_change_state (element=element@entry=0x55cbbe324600, transition=transition@entry=GST_STATE_CHANGE_NULL_TO_READY) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gstelement.c:3100 #8 0x00007fd0c81259f5 in gst_element_set_state_func (element=0x55cbbe324600, state=GST_STATE_READY) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gstelement.c:3054 #9 0x00007fd0c80ff36f in gst_bin_element_set_state (next=<optimized out>, current=<optimized out>, start_time=18446744073709551615, base_time=0, element=0x55cbbe324600, bin=<optimized out>) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gstbin.c:2582 #10 gst_bin_change_state_func (element=0x55cbbe383230, transition=GST_STATE_CHANGE_NULL_TO_READY) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gstbin.c:2934 #11 0x00007fd0c8125252 in gst_element_change_state (element=element@entry=0x55cbbe383230, transition=transition@entry=GST_STATE_CHANGE_NULL_TO_READY) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gstelement.c:3100 #12 0x00007fd0c81259f5 in gst_element_set_state_func (element=0x55cbbe383230, state=GST_STATE_READY) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gstelement.c:3054 #13 0x00007fd0c8120482 in gst_element_call_async_func (data=0x55cbbe2b98d0, user_data=<optimized out>) at ../../../../../jhbuild/checkout/gstreamer/subprojects/gstreamer/gst/gstelement.c:3839 #14 0x00007fd0cc244532 in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #15 0x00007fd0cc23ed92 in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #16 0x00007fd0cd46caa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447 #17 0x00007fd0cd4f9c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-11-22 09:46:22 PST
That's potentially a regression from
301308@main
(the GStreamerMediaEndpoint::prepareForClose() change).
Philippe Normand
Comment 2
2025-11-23 01:44:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54385
EWS
Comment 3
2025-11-24 02:48:13 PST
Committed
303484@main
(2005be166891): <
https://commits.webkit.org/303484@main
> Reviewed commits have been landed. Closing PR #54385 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug