[GStreamer] http/wpt/mediastream/mediastreamtrackprocessor-videoframe-timestamp.html crashes on the bots https://bugs.webkit.org/show_bug.cgi?id=302853

Reviewed by Xabier Rodriguez-Calvar.

MediaStreamTrack observation is already started when each InternalSource is registered in the
GStreamer mediastreamsrc element, so there's no need anymore to attempt that during state changes.

Driving-by, flag a Skia flaky crash, check the state again in
GStreamerMediaEndpoint::prepareForClose() before changing to READY, and fix another flaky crash
related with track observation in RealtimeOutgoing sources (that removeObserver is done already as
part of the source destruction).

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::prepareForClose):
* Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
(webkitMediaStreamSrcChangeState):
* Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.cpp:
(WebCore::RealtimeOutgoingMediaSourceGStreamer::stopOutgoingSource):

Canonical link: https://commits.webkit.org/303484@main